# nucleus

./: .gitignore  Gemfile  app.config.ts  app.json  babel.config.js  decodeSecrets.sh  eas.json  eslint.config.mjs  jest.config.js  package-lock.json  package.json  types.d.ts
.github/workflows/: desktop-updates.yml  store-release.yml
README/: DEBUG.MD  DEPLOY.MD  MAC.MD  Roadmap.MD  linux.md  windows.md
desktop/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
desktop/src/: main.tsx  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs  main.rs
fastlane/: Fastfile
public/text/: en.json  no.json
scripts/ci/: bump-native-build-numbers.mjs  configure-android-release-signing.mjs  disable-pods-code-signing.mjs  verify-direct-store-release-env.mjs  verify-store-release-env.mjs  write-direct-store-credentials.mjs
scripts/desktop/: check-update-endpoints.mjs  prepare-update-manifest.mjs
src/: App.tsx  constants.ts  interfaces.ts
src/redux/: ad.ts  event.ts  lang.ts  loginStatus.ts  misc.ts  notifications.ts  profile.ts  store.ts  theme.ts
src/styles/: adStyles.ts  clusterStyles.ts  eventStyles.ts  examStyles.ts  gameStyles.ts  globalStyles.ts  internalStyles.ts  menuStyles.ts  notificationStyles.ts  profileStyles.ts  settingStyles.ts  text.ts  themes.ts
src/tests/: adminApi.test.ts  albumDownloads.test.ts  auth.test.ts  contentHelpers.test.ts  courseNotes.test.ts  discoveryApi.test.ts  fetchContent.test.ts  globals.d.ts  linkingRoutes.test.ts  nativeDeepLinks.test.ts  notificationList.test.ts
(+344 files in other folders)
