[package]
name = "login-desktop"
version = "0.1.1"
description = "Cross-platform desktop launcher for Login"
authors = ["Login"]
edition = "2021"

[lib]
name = "login_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
tauri = { version = "2.10.1", features = [] }
tauri-plugin-opener = "2.5.3"
tauri-plugin-updater = "2.10.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
